# maven_mcp

./: README.md  pyproject.toml
src/maven_mcp/: __init__.py  __main__.py  config.py  nexus_client.py  server.py  version_utils.py  vuln_checker.py
src/maven_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
